Fix white space at bottom of page when puzzles are spilling out of container

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,6 +10,7 @@
   background-image: linear-gradient(to left top, #474859, #586272, #6a7d8b, #8098a2, #99b4b8, #a8c1bf, #bacec6, #cddbcf, #d9dccd, #e4dccf, #edddd5, #f1dfde);
   min-height: 100vh;
   width: 100vw;
+  padding: 0 0 5em 0;
 }
  
 .flex {
