--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -31,7 +31,7 @@
 }
 
 .homepage button:hover {
-  color: #474E4A;
+  background-color: #474E4A;
   cursor: pointer;
 }
 
