--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -31,6 +31,7 @@ h1:hover {
   font-size: 15px;
   cursor: pointer;
   margin: .5em;
+  font-weight: bold;
 }
 
 .nav-buttons button:hover {
