--- a/src/css/Puzzle.css
+++ b/src/css/Puzzle.css
@@ -9,8 +9,8 @@
 }
 
 .piece-count {
-	margin: .5em .5em .5em 0;
-	text-align: right;
+	margin: .8em .5em .8em 0;
+	text-align: left;
 }
 
 .individual-puzzle img {
