--- a/src/css/PuzzleContainer.css
+++ b/src/css/PuzzleContainer.css
@@ -1,16 +1,18 @@
 .puzzles-container {
 	padding: 35px;
+	min-height: 80vh;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(190px, auto));
   justify-items: center;
-  gap: 1% 3%;
+  gap: 0 1%;
 }
 
 .puzzle-page {
 	background: #F2EEEA;
 	box-shadow: 0 10px 14px rgb(34 15 15 / 13%), 0 4px 14px rgb(0 0 0 / 11%);
-	min-height: 80vh;
+	min-height: 75vh;
 	margin: 0 5em;
+	padding: 1em 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -33,6 +35,8 @@
   font-size: 15px;
   cursor: pointer;
   margin: .5em;
+	font-weight: bold;
+	width: 10%;
 }
 
 .filters button:hover {
